--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	},
 	"dependencies": {
 		"@discordjs/core": "^2.1.1",
-		"discord.js": "^14.20.0"
+		"discord.js": "^14.20.0",
+		"v0-sdk": "^0.0.10"
 	},
 	"devDependencies": {
 		"@sapphire/ts-config": "^5.0.1",
